--- a/Web/index.html
+++ b/Web/index.html
@@ -16,15 +16,18 @@
 
       <p id="titulo">Redes disponibles</p>
 
-      <select id="selector" name="SSID"></select>
+      <select id="selector" name="SSID" ></select>
 
-      <input type="text" name="PASS" value="Pass WiFi" class="css-input">
+      <input type="text" name="PASS" placeholder="Contraseña WiFi" class="css-input">
       </br>
-      <input type="text" name="CORREO" value="Correo" class="css-input">      
+      <input type="text" name="CORREO" placeholder="Correo" class="css-input">      
       </br>
-      <input type="text" name="Contra" value="Constraseña" class="css-input">      
+      <input type="text" name="Contra" placeholder="Contraseña De La Tarjeta" class="css-input">      
       </br>
-      <input type="text" name="DeterMiauId" value="Nombre Del Dispensador" class="css-input">      
+      <input type="text" name="DeterMiauId" placeholder="Nombre Del Dispensador" class="css-input">
+      </br>
+      <input type="text" name="Token" placeholder="Token De Telegram" class="css-input">      
+      </br>
 
       <div>
          <button class="myButton" type="button" onclick="ObtenerRedes()">Buscar</button>
