--- a/Web/index.html
+++ b/Web/index.html
@@ -5,7 +5,7 @@
       <title>DeterMiau</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="./assets/style.css">
+      <link rel="stylesheet" href="./style.css">
    </head>
  
    <body>
@@ -43,6 +43,6 @@
  
    </body>
 
-   <script type="text/javascript" src="./assets/scripts.js"></script>
+   <script type="text/javascript" src="./scripts.js"></script>
 
 </html>
